feat: 作品のサムネイル処理を改善し、Obsidian Dataviewプラグインを導入

--- a/content/works/超すごい時間割.md
+++ b/content/works/超すごい時間割.md
@@ -1,10 +1,10 @@
 ---
 tags:
   - Web
-startDate: 2024-11
-endDate: 2025-01
+startDate: 2024-11-01
+endDate: 2025-01-01
+thumbnail: "[[file-20251201082725834.png]]"
 ---
-![[file-20251201082725834.png]]
 
 | Category  | Name                                                  |
 | --------- | ----------------------------------------------------- |
@@ -12,7 +12,6 @@ endDate: 2025-01
 | バックエンド実装  | 後藤慶尚・栁田和佳                                             |
 | 使用言語      | Next.js・React・TypeScript                              |
 | リンク       | [GitHub](https://github.com/chibayuto/chibayuto-site) |
-
 
 大学のWebアプリケーション開発課題にて、時間割とカレンダーを簡易に一元化できるアプリケーションである「超すごい時間割」を制作した。
 
