feat: 新しい作品を追加し、作品の公開日管理を`startDate`/`endDate`から`createdAt`に統一しました。

--- a/content/works/M→Fes2024.md
+++ b/content/works/M→Fes2024.md
@@ -2,8 +2,7 @@
 tags:
   - デザイン
   - Web
-startDate: 2024-11-01
-endDate: 2024-11-01
+createdAt: 2024-11-01
 thumbnail: "[[file-20251201190547896.png]]"
 ---
 
