--- a/content/works/渡邊恵太研究室プロモーションビデオ.md
+++ b/content/works/渡邊恵太研究室プロモーションビデオ.md
@@ -1,8 +1,7 @@
 ---
 tags:
   - 映像
-startDate: 2024-11-01
-endDate: 2025-01-01
+createdAt: 2025-01-01
 thumbnail: "[[file-20251201183000773.png]]"
 ---
 
