--- a/content/works/超すごい時間割.md
+++ b/content/works/超すごい時間割.md
@@ -1,8 +1,7 @@
 ---
 tags:
   - Web
-startDate: 2024-11-01
-endDate: 2025-01-01
+createdAt: 2025-01-01
 thumbnail: "[[file-20251201082725834.png]]"
 ---
 
