--- a/content/works/M→Fes2024.md
+++ b/content/works/M→Fes2024.md
@@ -1,9 +1,10 @@
 ---
+slug: mfes2024
+thumbnail: "[[file-20251201190547896.png]]"
+createdAt: 2024-11-01
 tags:
   - デザイン
   - Web
-createdAt: 2024-11-01
-thumbnail: "[[file-20251201190547896.png]]"
 ---
 
 | Category | Name                                         |
