--- a/content/works/拝啓、十年前の君へ.md
+++ b/content/works/拝啓、十年前の君へ.md
@@ -1,8 +1,9 @@
 ---
+slug: haikei
+thumbnail: "[[file-20251201210304259.png]]"
+createdAt: 2021-11-01
 tags:
   - 映像
-createdAt: 2021-11-01
-thumbnail: "[[file-20251201210304259.png]]"
 ---
 
 | Category | Name                                                   |
