--- a/content/works/渡邊恵太研究室プロモーションビデオ.md
+++ b/content/works/渡邊恵太研究室プロモーションビデオ.md
@@ -1,8 +1,9 @@
 ---
+slug: 100kwmovie
 tags:
   - 映像
-createdAt: 2025-01-01
 thumbnail: "[[file-20251201183000773.png]]"
+createdAt: 2025-01-01
 ---
 
 | Category | Name                                                         |
