--- a/content/works/超すごい時間割.md
+++ b/content/works/超すごい時間割.md
@@ -1,8 +1,9 @@
 ---
+slug: uat
+thumbnail: "[[file-20251201082725834.png]]"
+createdAt: 2025-01-01
 tags:
   - Web
-createdAt: 2025-01-01
-thumbnail: "[[file-20251201082725834.png]]"
 ---
 
 | Category  | Name                                                  |
