feat: MVGenerator, RecommendMap, Pixel Website, OPENINGなどの複数の作品エントリーのコンテンツを更新しました。

--- a/content/works/M→Fes2024.md
+++ b/content/works/M→Fes2024.md
@@ -5,6 +5,8 @@ createdAt: 2024-11-01
 tags:
   - デザイン
   - Web
+isPinned: true
+isDraft: false
 ---
 
 | Category | Name                                         |
