--- a/content/works/渡邊恵太研究室プロモーションビデオ.md
+++ b/content/works/渡邊恵太研究室プロモーションビデオ.md
@@ -4,6 +4,8 @@ tags:
   - 映像
 thumbnail: "[[file-20251201183000773.png]]"
 createdAt: 2025-01-01
+isPinned: false
+isDraft: false
 ---
 
 | Category | Name                                                         |
