--- a/content/works/超すごい時間割.md
+++ b/content/works/超すごい時間割.md
@@ -4,6 +4,8 @@ thumbnail: "[[file-20251201082725834.png]]"
 createdAt: 2025-01-01
 tags:
   - Web
+isPinned: false
+isDraft: false
 ---
 
 | Category  | Name                                                  |
