--- a/content/works/M→Fes2023 オープニング映像.md
+++ b/content/works/M→Fes2023 オープニング映像.md
@@ -4,6 +4,8 @@ thumbnail: "[[file-20251201211754354.png]]"
 createdAt: 2023-12-01
 tags:
   - 映像
+isPinned: false
+isDraft: false
 ---
 
 | Category | Name                                                   |
