--- a/content/works/拝啓、十年前の君へ.md
+++ b/content/works/拝啓、十年前の君へ.md
@@ -4,6 +4,8 @@ thumbnail: "[[file-20251201210304259.png]]"
 createdAt: 2021-11-01
 tags:
   - 映像
+isPinned: true
+isDraft: false
 ---
 
 | Category | Name                                                   |
