feat: ArchenaとKeitaLab Websiteの新規コンテンツとObsidian設定を追加し、既存のワークファイルを更新

--- a/content/chibayuto-vault/works/超すごい時間割.md
+++ b/content/chibayuto-vault/works/超すごい時間割.md
@@ -1,9 +1,10 @@
 ---
 slug: uat
 thumbnail: "[[file-20251201082725834.png]]"
-createdAt: 2025-01-01
+createdAt: 2025-01-14
 tags:
   - Web
+  - プログラミング
 isPinned: false
 isDraft: false
 ---
@@ -13,7 +14,7 @@ isDraft: false
 | フロントエンド実装 | 千葉裕斗・金子翔平                                             |
 | バックエンド実装  | 後藤慶尚・栁田和佳                                             |
 | 使用言語      | Next.js・React・TypeScript                              |
-| リンク       | [GitHub](https://github.com/chibayuto/chibayuto-site) |
+| ソースコード    | [GitHub](https://github.com/chibayuto/chibayuto-site) |
 
 大学のWebアプリケーション開発課題にて、時間割とカレンダーを簡易に一元化できるアプリケーションである「超すごい時間割」を制作した。
 
